dnl Process this file with autoconf to produce a configure script.

AC_REVISION([ $Id: configure.in,v 1.2 1998/08/30 05:04:28 channui Exp $ ])
AC_INIT(wakelan.c)

# 
# Copyright (C) 1998 by Christopher Chan-Nui
# 
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
# 


AC_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS( getopt.h )

dnl check for environment variables
AC_SUBST(OPTIMIZE)

AC_OUTPUT(Makefile)
